--- a/#src/sass/_fonts.sass
+++ b/#src/sass/_fonts.sass
@@ -1,4 +1,5 @@
 @include font("Banny-BoldRound", "Banny-BoldRound", "400", "normal")
-@include font("OpenSans-Bold", "OpenSans-Bold", "400", "normal")
 @include font("Banny-Round", "Banny-Round", "400", "normal")
+@include font("OpenSans-Bold", "OpenSans-Bold", "400", "normal")
+@include font("OpenSans-Regular", "OpenSans-Regular", "400", "normal")
 @include font("Roboto-Bold", "Roboto-Bold", "400", "normal")
