--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -160,15 +160,8 @@ body
 	@include Heading1()
 
 .header_btns:before
-	content: ''
-	position: absolute
-	border-radius: 3.125rem
-	height: .3125rem
-	background-color: $yellow
-	left: 50%
-	margin-left: -1.875rem
-	width: 3.75rem
-
+	@include PseudoYellowLine()
+	
 .header_btns_wrapper
 	display: flex
 	flex-wrap: wrap
@@ -242,3 +235,53 @@ body
 	background: $lightGrey
 	width: 1px
 	height: 6.25rem
+
+//!----------------------------------
+.block
+	min-height: 42.1875rem
+	height: 1px
+
+.block-part
+	display: flex
+	flex: 1 1 50%
+	align-items: center
+	justify-content: center
+
+.block__flex
+	height: 100%
+	display: flex
+	flex-direction: row
+
+.block_heading
+	@include Heading2()
+	
+.block_text__primary
+	@include BlockTextPrimary()
+
+.block_text__bold
+	padding-top: .9375rem
+	padding-bottom: .9375rem
+	@include BlockTextBold()
+
+.block_image
+	width: 29.6875rem
+	height: 29.6875rem
+	box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5)
+
+.block_image_wrapper
+	position: relative
+	display: flex
+	align-items: center
+
+.block_image_wrapper:before
+	@include PseudoYellowSquare('r')
+	
+
+//!----------------------------------
+.about_text
+	margin-top: .3125rem
+	position: relative
+
+.about_text:before
+	@include PseudoYellowLine()
+	
