--- a/Hunger/css/style.css
+++ b/Hunger/css/style.css
@@ -7,6 +7,14 @@
 }
 
 @font-face {
+  font-family: "Banny-Round";
+  font-display: swap;
+  src: url("../fonts/Banny-Round.woff") format("woff"), url("../fonts/Banny-Round.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "OpenSans-Bold";
   font-display: swap;
   src: url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.woff2") format("woff2");
@@ -15,9 +23,9 @@
 }
 
 @font-face {
-  font-family: "Banny-Round";
+  font-family: "OpenSans-Regular";
   font-display: swap;
-  src: url("../fonts/Banny-Round.woff") format("woff"), url("../fonts/Banny-Round.woff2") format("woff2");
+  src: url("../fonts/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -699,6 +707,94 @@ body {
   background: rgba(255, 255, 255, 0.2);
   width: 1px;
   height: 6.25rem;
+}
+
+.block {
+  min-height: 42.1875rem;
+  height: 1px;
+}
+
+.block-part {
+  display: flex;
+  flex: 1 1 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.block__flex {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.block_heading {
+  font-family: Banny-Round;
+  line-height: 3rem;
+  letter-spacing: 0em;
+  text-align: center;
+  font-size: 2.25rem;
+}
+
+.block_text__primary {
+  font-family: OpenSans-Regular;
+  font-size: .875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.block_text__bold {
+  padding-top: .9375rem;
+  padding-bottom: .9375rem;
+  font-family: OpenSans-Bold;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.75rem;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.block_image {
+  width: 29.6875rem;
+  height: 29.6875rem;
+  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5);
+}
+
+.block_image_wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.block_image_wrapper:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  margin-right: -7.8125rem;
+  width: 15.625rem;
+  height: 15.625rem;
+  border: 20px solid #E8C300;
+  box-sizing: border-box;
+  border-radius: .3125rem;
+}
+
+.about_text {
+  margin-top: .3125rem;
+  position: relative;
+}
+
+.about_text:before {
+  content: '';
+  position: absolute;
+  border-radius: 3.125rem;
+  height: .3125rem;
+  background-color: #E8C300;
+  left: 50%;
+  margin-left: -1.875rem;
+  width: 3.75rem;
 }
 
 @media screen and (min-width: 90rem) {
