--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -393,6 +393,10 @@ body
 	flex-direction: row
 	flex-wrap: wrap
 	justify-content: space-between
+	@media screen and ( max-width: 769px ) and (min-width: 375px)
+		max-width: 70%
+		
+		
 
 .book_form_item_wrapper
 	display: flex
