--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -1,6 +1,7 @@
 @import "_variables.sass"
 @import "_fonts.sass"
 @import '~normalize.css/normalize'
+@import 'slick.scss'
 //!----------------------------------
 html
 	@media screen and ( min-width: 90rem )
@@ -13,15 +14,17 @@ body
 	overflow-x: hidden
 	min-height: 100vh
 	width: 100vw
+	display: flex
+	flex-direction: column
 
 .container
 	margin: auto
 	padding: 0 .9375rem 0 .9375rem
-	@media screen and ( min-width: 90rem )
+	@media screen and ( min-width: 1440px )
 		max-width: 80rem
-	@media screen and ( max-width: 90rem )
-		max-width: 80rem
-
+	@media screen and ( max-width: 1440px )
+		max-width: 64rem
+	
 .btn
 	display: flex
 	align-items: center
@@ -241,12 +244,12 @@ body
 //!----------------------------------
 .block
 	min-height: 42.1875rem
-	height: 1px
 	display: flex
+	flex-direction: column
 	justify-content: center
 	position: relative
-	@media screen and ( max-width: 768px )
-		padding-bottom: 3.125rem
+	align-items: center
+	
 
 .block-part
 	display: flex
@@ -260,10 +263,11 @@ body
 
 .block__flex
 	position: relative
-	height: 100%
 	display: flex
+	flex: 1 1 auto
 	flex-direction: row
 	flex-wrap: wrap
+	justify-content: center
 
 .block_heading
 	@include Heading2()
@@ -281,13 +285,14 @@ body
 
 .block_image
 	box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.5)
-	@include adaptiv-px($pcSize: 475, $mobSize: 150, $prop: "width")
-	@include adaptiv-px($pcSize: 475, $mobSize: 150, $prop: "height")
+	@include adaptiv-px($pcSize: 475, $mobSize: 120, $prop: "width")
+	@include adaptiv-px($pcSize: 475, $mobSize: 120, $prop: "height")
 
 .block_image_wrapper
 	position: relative
 	display: flex
 	align-items: center
+	
 
 .block_image_wrapper__right:before
 	@include PseudoYellowSquare('r')
@@ -322,9 +327,8 @@ body
 .block_top
 	position: absolute
 	height: 5.3125rem
-	width: 100%
 	display: flex
-	flex: 0 0 100%
+	flex: 1 1 auto
 	justify-content: center
 	align-items: center
 	order: 1
@@ -393,7 +397,7 @@ body
 	flex-direction: row
 	flex-wrap: wrap
 	justify-content: space-between
-	@media screen and ( max-width: 769px ) and (min-width: 375px)
+	@media screen and ( max-width: 768px ) and (min-width: 375px)
 		max-width: 70%
 		
 		
