--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -419,3 +419,12 @@ body
 .book_form_button
 	padding: 0
 	width: 100%
+//!-----------------------------------
+.block__spec
+	background-image: url("../img/specs.png")
+	background-repeat: no-repeat
+	background-position: center
+	background-size: cover
+
+.block__spec_slider
+	min-width: 0
