--- a/Hunger/css/style.css
+++ b/Hunger/css/style.css
@@ -15,9 +15,9 @@
 }
 
 @font-face {
-  font-family: "OpenSans-Bold";
+  font-family: "Roboto-Bold";
   font-display: swap;
-  src: url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.woff2") format("woff2");
+  src: url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -31,9 +31,9 @@
 }
 
 @font-face {
-  font-family: "Roboto-Bold";
+  font-family: "OpenSans-Bold";
   font-display: swap;
-  src: url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.woff2") format("woff2");
+  src: url("../fonts/OpenSans-Bold.woff") format("woff"), url("../fonts/OpenSans-Bold.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -1059,6 +1059,17 @@ body {
 .book_form_button {
   padding: 0;
   width: 100%;
+}
+
+.block__spec {
+  background-image: url("../img/specs.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.block__spec_slider {
+  min-width: 0;
 }
 
 @media screen and (min-width: 90rem) {
